# cyrus-sasl-xoauth2

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  cyrus-sasl-xoauth2.spec  xoauth2_client.c  xoauth2_init.c  xoauth2_plugin.h  xoauth2_server.c  xoauth2_socket.h  xoauth2_socket_common.c  xoauth2_socket_unix.c  xoauth2_socket_unix.h  xoauth2_socket_win32.c  xoauth2_socket_win32.h  xoauth2_str.c  xoauth2_token_conv.c  xoauth2_token_conv.h
tests/: .gitignore  Makefile.am  test_xoauth2_token_conv.c  token_conv_server.py
